--- a/testelpris/index.html
+++ b/testelpris/index.html
@@ -6,6 +6,7 @@
 <script src="https://d3js.org/d3.v5.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.js" defer></script>
 <script src="functions.js" defer></script>
+<script src="data.js" defer></script>
 <script src="index.js" defer></script>
 
 </head>
